# networking-dvs

./: .gitignore  .stestr.conf  .testr.conf  .travis.yml  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/neutron/plugins/ml2/: ml2_conf_vmware_dvs.ini
networking_dvs/agent/firewalls/: dvs_securitygroup_rpc.py
networking_dvs/api/: dvs_agent_rpc_api.py
networking_dvs/common/: config.py  constants.py  db.py  exceptions.py  util.py
networking_dvs/patches/: suds_patch.py
networking_dvs/plugins/ml2/drivers/mech_dvs/: config.py  constants.py  driver.py
networking_dvs/plugins/ml2/drivers/mech_dvs/agent/: config.py  dvs_agent.py  dvs_firewall.py  entry_point.py  vcenter_util.py  vmware_util.py
networking_dvs/tests/unit/: security_group_utils_tests.py  test_security_group_utils.py
networking_dvs/utils/: compute_util.py  dvs_util.py  security_group_utils.py  spec_builder.py
