[metadata]
name = networking_dvs
summary = This project tracks the work to provide a simple integration of VMware DVS networking with Neutron.
description-file =
    README.rst
license = Apache License, Version 2.0
author = SAP SE
author-email = andrew.battye@sap.com
home-page = http://www.sap.com/
url = https://github.com/sapcc/networking-dvs
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords = openstack neutron VMware DVS networking

[files]
packages = networking_dvs
data_files =
    /etc/neutron/plugins/ml2 =
        etc/neutron/plugins/ml2/ml2_conf_vmware_dvs.ini.sample

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_dvs/locale
domain = networking_dvs

[update_catalog]
domain = nnetworking_dvs
output_dir = networking_dvs/locale
input_file = networking_dvs/locale/networking-dvs.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_dvs/locale/networking-dvs.pot

[entry_points]
console_scripts =
    neutron-dvs-agent = networking_dvs.plugins.ml2.drivers.mech_dvs.agent.dvs_agent:main
neutron.ml2.mechanism_drivers =
    dvs = networking_dvs.plugins.ml2.drivers.mech_dvs.driver:VMwareDVSMechanismDriver
